deployment/kustomize/overlays/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amalkov-devops-final-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: amalkov.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amalkov-devops-final-service
                port:
                  name: http
  tls:
    - hosts:
      - amalkov.dacdevops.ru
      secretName: amalkov-devops-final-cert
